# ECS-Entity-Component-System-Framework

./: CMakeLists.txt  README.md
dependencies/: FastDelegate.h
include/ecs/: component.h  ecs.h  engine.h  task.h
include/ecs/utils/: config.h  emath.h  formatString.h  logger.h
src/3party/: FastDelegate.h  catch.hpp
src/client/: main.cpp
src/client/components/: graphicsComponent.h  positionComponent.h  relativePositionComponent.h  renderingComponent.h  sizeComponent.h  windowCallbackComponent.h  windowTreeComponent.h
src/client/events/: mouseButtonPressed.h  mouseButtonReleased.h  textEntered.h  unknownSFMLEvent.h
src/client/events/system/: applicationClosed.h  keyPressed.h  keyReleased.h  mouseButtonPressed.h  mouseButtonReleased.h  mouseMoved.h  textEntered.h  unknownSFMLEvent.h
src/client/tasks/: GUITask.h  controller.cpp  controller.h  debug.cpp  debug.h  input.cpp  input.h  renderer.cpp  renderer.h
src/common/: emath.h  formatString.cpp  formatString.h  unused.h  utils.cpp  utils.h
src/core/: component.h  componentContainer.h  componentDef.h  componentFactory.h  componentManager.cpp  componentManager.h  componentRegistrator.h  componentsManager.h  ecs.cpp  ecs.h  engine.cpp  engine.h  entity.h  entityFactory.cpp  entityFactory.h  entityID.h  entityManager.cpp  entityManager.h  event.h  eventQueue.h  globalDefs.cpp  globalDefs.h  singleEventQueue.h  task.cpp  task.h  taskManager.cpp  taskManager.h  taskScheduler.cpp  taskScheduler.h
src/core/detail/: FastDelegate.h  componentFactory.h  containerID.cpp  singleQueue.h  staticCounters.cpp
src/test/core/: componentsTest.cpp  configTest.cpp  eventsTest.cpp  tasksTest.cpp
src/tool/: config.cpp  config.h  logger.cpp  logger.h  loggerConsoleOutput.h  loggerFileOutput.h  profiler.cpp  profiler.h  timer.h
src/utils/: config.cpp  config.h  emath.h  formatString.cpp  formatString.h  getTupleElementByID.h  logger.h  loggerConsoleOutput.h  loggerFileOutput.h  stringUtils.cpp  stringUtils.h  timer.h
test/common/: formatString.cpp
test/core/: componentsTest.cpp  configTest.cpp  eventsTest.cpp  tasksTest.cpp
tests/: testsMain.cpp
tests/core/: TaskManagerTests.cpp  TaskSchedulerTests.cpp  componentContainerTests.cpp  componentsManagerTests.cpp  eventQueueTests.cpp
tests/utils/: configurationTests.cpp
